--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0-beta.3",
+    "pretty-checkbox": "^3.0.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
